adedd counter animation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
+    "counterup2": "^2.0.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
